option(COMPILE_UNUSED_FUNCTIONS "compile unused function")
if(COMPILE_UNUSED_FUNCTIONS)
	set_source_files_properties(nifticdf.c PROPERTIES
		COMPILE_DEFINITIONS "__COMPILE_UNUSED_FUNCTIONS__"
	)
endif(COMPILE_UNUSED_FUNCTIONS)

add_library(nifticdf nifticdf.c)

target_include_directories(nifticdf
	PUBLIC $<TARGET_PROPERTY:niftiio,INTERFACE_INCLUDE_DIRECTORIES>
	INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
)

set_target_properties(nifticdf PROPERTIES
	PUBLIC_HEADER nifticdf.h
	VERSION ${VERSION}
)

install(TARGETS nifticdf
	LIBRARY DESTINATION ${INSTALL_LIB_DIR}
	ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
	PUBLIC_HEADER DESTINATION ${INSTALL_INC_DIR}
)
